[package]
name = "abc266"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.3"
num = "0.4.0"
rand = "0.6"


[[bin]]
name = "a"
path = "src/a.rs"

[[bin]]
name = "b"
path = "src/b.rs"

[[bin]]
name = "c"
path = "src/c.rs"

[[bin]]
name = "d"
path = "src/d.rs"

[[bin]]
name = "e"
path = "src/e.rs"

[[bin]]
name = "f"
path = "src/f.rs"

[[bin]]
name = "g"
path = "src/g.rs"