[package]
name = "arc159"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
arc159-a = { alias = "a", problem = "https://atcoder.jp/contests/arc159/tasks/arc159_a" }
arc159-b = { alias = "b", problem = "https://atcoder.jp/contests/arc159/tasks/arc159_b" }
arc159-c = { alias = "c", problem = "https://atcoder.jp/contests/arc159/tasks/arc159_c" }
arc159-d = { alias = "d", problem = "https://atcoder.jp/contests/arc159/tasks/arc159_d" }
arc159-e = { alias = "e", problem = "https://atcoder.jp/contests/arc159/tasks/arc159_e" }
arc159-f = { alias = "f", problem = "https://atcoder.jp/contests/arc159/tasks/arc159_f" }

[[bin]]
name = "arc159-a"
path = "src/bin/a.rs"

[[bin]]
name = "arc159-b"
path = "src/bin/b.rs"

[[bin]]
name = "arc159-c"
path = "src/bin/c.rs"

[[bin]]
name = "arc159-d"
path = "src/bin/d.rs"

[[bin]]
name = "arc159-e"
path = "src/bin/e.rs"

[[bin]]
name = "arc159-f"
path = "src/bin/f.rs"

[dependencies]
proconio = "0.4.3"
num = "0.4.0"
rand = "0.6"
rustc-hash = "1.1"
itertools   = "0.9.0"

[dev-dependencies]
